Clean unnecessary methods and add some statements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ast-shaper"
 edition = "2021"
 authors = ["Alexis Bekhdadi <alexis@bekhdadi.com>"]
 license = "Apache-2.0"
-description = "AST-Shaper : A set of utilities for shaping, transforming, and generating Rust code with syn. "
+description = "A set of utilities for shaping, transforming, and generating Rust code with syn. "
 repository = "https://github.com/midoriiro/ast-shaper.git"
 documentation = ""
 keywords = ["ast", "macro", "syn", "tools"]
