--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }
 quote = "1.0"
 prettyplease = "0.2"
 itertools = "0.14"
+
+[dev-dependencies]
+rstest = "0.24"
